--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -25,17 +25,17 @@
    <div class="navbar-right ml-auto">
        <div class="collapse navbar-collapse">
            <ul class="navbar-nav mr-auto">
-               <li class="nav-item borderedNavItem">
+               <li class="nav-item">
                    <a class="nav-link" data-value="about" href="#about">About</a>
                </li>
-               <li class="nav-item borderedNavItem">
-                   <a class="nav-link" data-value="portfolio" href="#portfolio">Portofoliu</a>
+               <li class="nav-item">
+                   <a class="nav-link" data-value="portfolio" href="#portofoliu">Portofoliu</a>
                </li>
-               <li class="nav-item borderedNavItem">
+               <li class="nav-item">
                    <a class="nav-link" data-value="blog" href="#blog">Blog</a>
                </li>
-               <li class="nav-item borderedNavItem">
-                   <a class="nav-link" data-value="contact" href="#contact"> in touch</a>
+               <li class="nav-item">
+                   <a class="nav-link" data-value="contact" href="#getintouch">Get in touch</a>
                </li>
            </ul>
        </div>
@@ -43,41 +43,6 @@
 </nav>
 
 
-<!--
-<nav class="navbar navbar-expand-lg navbar-custom navbar-light fixed-top">
--->
-  <!--meniu stinga -->
-  <!--
-    <div class=“navbar-left”>
-       <ul class=“nav navbar-nav navbar-left”>
-           <li class=“nav-item>
-               <a class=“nav-link” href=“index.html”>Home page<span class=“sr-only”>(current)</span></a>
-           </li>
-       </ul>
-   </div>
- -->
-  <!-- meniu dreapta-->
-  <!--
-    <div class="navbar-right" id="navbarNavAltMarkup">
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-              <li class="nav-item borderedNavItem">
-                <a class="nav-link" data-value="about" href="#about">About</a>
-              </li> 
-              <li class="nav-item borderedNavItem">
-                <a class="nav-link" data-value="portofoliu" href="#portofoliu">Portofoliu</a>
-              </li>
-              <li class="nav-item borderedNavItem">
-                <a class="nav-link" data-value="blog" href="#blog">Blog</a>
-              </li>
-              <li class="nav-item borderedNavItem">
-                <a class="nav-link" data-value="getintouch" href="#getintouch">Get in touch</a>
-              </li>
-            </ul>           
-        </div>
-    </div>
-</nav>
--->
 <header class="header">
 <div class="overlay">
   <div class="container">
