--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -13,6 +13,44 @@
 </head>
 
 <body>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Home</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        
+        <li><a href="#">Page 1</a></li>
+        <li><a href="#">Page 2</a></li> 
+        <li><a href="#">Page 3</a></li> 
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+               <li class="nav-item">
+                   <a class="nav-link" data-value="about" href="#about">About</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" data-value="portfolio" href="#portofoliu">Portofoliu</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" data-value="blog" href="#blog">Blog</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" data-value="contact" href="#getintouch">Get in touch</a>
+               </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+  <!--
 <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
    <div class="navbar-left">
        <ul class="nav navbar-nav navbar-left">
@@ -41,7 +79,7 @@
        </div>
    </div>
 </nav>
-
+-->
 
 <header class="header">
 <div class="overlay">
