--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -14,72 +14,25 @@
 
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">Home</a>
+<nav class="navbar navbar-expand navbar-custom fixed-top">
+  <!--meniu stinga -->
+  <div class="collapse navbar-collapse navbar-left" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="#">HOME</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li> 
-        <li><a href="#">Page 3</a></li> 
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-               <li class="nav-item">
-                   <a class="nav-link" data-value="about" href="#about">About</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" data-value="portfolio" href="#portofoliu">Portofoliu</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" data-value="blog" href="#blog">Blog</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" data-value="contact" href="#getintouch">Get in touch</a>
-               </li>
-
-      </ul>
+  </div>
+  <!-- meniu dreapta-->
+  <div class="navbar-right navright" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" data-value="about" href="#about">About</a>
+      <a class="nav-item nav-link" data-value="portofoliu" href="#portofoliu">Portofoliu</a>
+      <a class="nav-item nav-link" data-value="blog" href="#blog">Blog</a>
+      <a class="nav-item nav-link" data-valu="getintouch" href="#getintouch">Get in touch</a>
     </div>
   </div>
 </nav>
 
-  <!--
-<nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
-   <div class="navbar-left">
-       <ul class="nav navbar-nav navbar-left">
-           <li class="nav-item active">
-               <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-           </li>
-       </ul>
-   </div>
-
-   <div class="navbar-right ml-auto">
-       <div class="collapse navbar-collapse">
-           <ul class="navbar-nav mr-auto">
-               <li class="nav-item">
-                   <a class="nav-link" data-value="about" href="#about">About</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" data-value="portfolio" href="#portofoliu">Portofoliu</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" data-value="blog" href="#blog">Blog</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" data-value="contact" href="#getintouch">Get in touch</a>
-               </li>
-           </ul>
-       </div>
-   </div>
-</nav>
--->
+ 
 
 <header class="header">
 <div class="overlay">
