--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -163,6 +163,14 @@
 
 <script type = "text/javascript" src="less.min.js" ></script>
 <script type = "text/javascript" src = "../js/main.js"> </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("#getintouch").click(function(){
+    $("p").append(" <p><b>Подчиненная форма</b>.</p>");
+  });
 
+});
+</script>
 </body>
 </html>
