--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -167,7 +167,7 @@
 <script>
 $(document).ready(function(){
   $("#getintouch").click(function(){
-    $("p").append(" <p><b>Подчиненная форма</b>.</p>");
+    $("textarea").append(" <p><b>Подчиненная форма</b>.</p>");
   });
 
 });
