--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -135,7 +135,7 @@
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12" >
     
-        <form class="form-horizontal custom-form" action="#">
+        <form class="form-horizontal custom-form" action="">
           <div class="form-group">
                 
                   <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
