--- a/homework4/less/index.html
+++ b/homework4/less/index.html
@@ -132,6 +132,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12 custom-right">
       <h1 class="text-center">Get in touch</h1>
+      <p style="color: green" id="contact"></p>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12" >
     
@@ -167,7 +168,7 @@
 <script>
 $(document).ready(function(){
   $("#getintouch").click(function(){
-    $("textarea").append(" <p><b>Подчиненная форма</b>.</p>");
+    $("#contact").append(" <b>Подчиненная форма</b>");
   });
 
 });
